# inventory

./: .gitignore  Cargo.toml  package.json  vite.config.js
graphql/: schema.gql
prisma/: schema.prisma
prisma/migrations/20220619033709_added_user/: migration.sql
requests/GET /: items.http
src/: app.module.ts  main.rs
src/controllers/: hello_controller.rs  items_controller.rs  mod.rs  root_controller.rs
src/db/: mod.rs  schema.prisma  schema.rs
src/db/migrations/20220619183020_added_user/: migration.sql
src/db/migrations/2023-12-04-235628_create_items/: down.sql  up.sql
src/domain/models/: item.rs
src/domain/repositories/: item_repository.rs
src/dto/user/: newUser.input.ts  update-user.input.ts
src/frontend/: main.js
src/gql/: schema.gql
src/gql/resolvers/: user.resolver.ts
src/models/: user.model.ts
src/modules/: user.module.ts
src/public/: bundle.js
src/services/: item_service.rs  prisma.service.ts  user.service.ts
src/templates/: index.html.tera
src/templates/items/: index.html.tera  show.html.tera
src/templates/layouts/: application.html.tera  public.html.tera
src/user/: user.service.ts
src/user/entities/: user.entity.ts
test/user/: user.resolver.spec.ts  user.service.spec.ts
