[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
chrono = "0.4.31"
diesel = { version = "2.1.0", features = ["postgres", "uuid"] }
serde = { version = "1.0.193", features = ["derive"]}
dotenvy = "0.15"
uuid = { version = "1.6.1", features = ["serde"]}
serde_json = "1.0.108"
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
